# MinerU-Ecosystem

./: .gitignore
finreport-mcp/: README.md  pyproject.toml
finreport-mcp/src/finreport_mcp/: __init__.py  banner.py  cli.py  server.py
finreport-mcp/src/finreport_mcp/tools/: __init__.py  store.py  table_converter.py  tools.py
finreport-mcp/tests/: demo_tools.py
sdk/python/: .env.example  .gitignore
sdk/python/tests/: add_md_to_server.py  add_md_to_server_v2.py  test_pdf_demo_batch.py
skills/: SKILL.md
viewer/: README.md  index.html  package-lock.json  package.json  vite.config.ts
viewer/docs/: PDF_MARKDOWN_MAPPING.md
viewer/src/: App.tsx  index.css  types.ts
viewer/src/components/: ContentPanel.tsx  FolderLoader.tsx  PdfPanel.tsx
